--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,16 +4,19 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  
-  # Google Fonts for Poppins typography
+
+  # UI & Fonts
   flutter_svg: ^2.2.3
   google_fonts: ^6.1.0
-  
+
+  # Charts (for donut chart)
+  fl_chart: ^0.63.0
+
   # Number formatting for Indian currency
   intl: ^0.19.0
 
@@ -24,7 +27,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  
-  # HDFC logo asset
+
   assets:
     - assets/images/
